--- a/printer/templates/too_long.html
+++ b/printer/templates/too_long.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 	<title>
-		Wrong Type
+		No File
 	</title>
 	<body>
-		Code Printer only prints text files ending with .c, .cpp, .java, or .py.<br/>
+		Aren't you ready to print some source code?<br/>
 		<a href="code_printer">Back to Code Printer</a>
 	</body>
 </html>
