--- a/printer/templates/too_long.html
+++ b/printer/templates/too_long.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 	<title>
-		No File
+		Too Long
 	</title>
 	<body>
-		Aren't you ready to print some source code?<br/>
+		LLE: Length Limit Exceeded!<br/>
 		<a href="code_printer">Back to Code Printer</a>
 	</body>
 </html>
